# Sandbox

./: .gitignore  CMakeLists.txt  README.md  compile.sh  compile_commands.json
cmake_build_Debug/: CMakeCache.txt  Makefile  SandSimulation  cmake_install.cmake  compile_commands.json
cmake_build_Debug/.cmake/api/v1/reply/: codemodel-v2-fd8effaccabacbe1bdb4.json  index-2023-07-24T21-34-05-0285.json  target-SandSimulation-Debug-b5b335030ceaba7cf38b.json
include/: Game.h  Global.h  Particles.h  SandSimulator.h  Time.h
src/: Game.cpp  SandSimulator.cpp  Time.cpp  main.cpp
